crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_hide_custom_name_error.txt
Q = (program
  {
    {
      (comment) @comment
    } @inner :: Q
  } @outer :: text
)
------------------ DIAGNOSTICS -------------------
error: type name `Q` is already used for a different type
 --> query.ptk:5:17
  |
1 | / Q = (program
2 | |   {
3 | |     {
4 | |       (comment) @comment
5 | |     } @inner :: Q
  | |                 ^
6 | |   } @outer :: text
7 | | )
  | |_- already used here
